--- a/src/Hvac.Web/wwwroot/index.html
+++ b/src/Hvac.Web/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -43,23 +43,7 @@
             </div>
 
             <div class="level-right">
-                <div class="level-item is-hidden-mobile">
-                    <div class="tabs is-toggle is-toggle-rounded">
-                        <ul>
-                            <li>
-                                <a>
-                                    <span>☀️</span>
-                                </a>
-                            </li>
-
-                            <li class="is-active">
-                                <a>
-                                    <span>🌙</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                <div id="themeSwitcher" class="level-item is-hidden-mobile"></div>
             </div>
         </div>
 
@@ -137,7 +121,7 @@
                     </div>
 
                     <div class="field">
-                        <label for="horizontalFlow" class="label">Horizontal Flow</label>
+                        <label for="horizontalFlow" class="label">Horizontal flow</label>
                         <div class="select">
                             <select id="horizontalFlow">
                             </select>
@@ -245,6 +229,26 @@
 
     </main>
 </body>
+
+<!-- Theme switcher -->
+
+<template id="themeSwitcherTemplate">
+    <div class="tabs is-toggle is-toggle-rounded">
+        <ul>
+            <!-- Items... -->
+        </ul>
+    </div>
+</template>
+
+<template id="themeSwitcherItemTemplate">
+    <li>
+        <a>
+            <span></span>
+        </a>
+    </li>
+</template>
+
+<!-- Them switcher end -->
 
 <script>
     rtl.showUncaughtExceptions = true;
